# claude-code-design-helper

./: .version  README.md
claude-code-design-helper/: CMakeLists.txt  requirements.txt  setup.py
claude-code-design-helper/claude_code_design_helper/: __init__.py  cli.py  designer.py  validator.py
claude-code-design-helper/include/: code_generator.h  design_analyzer.h
claude-code-design-helper/src/: code_generator.cpp  design_analyzer.cpp  main.cpp
claude-code-design-helper/tests/: test_design_analyzer.cpp  test_designer.py  test_validator.py
